# AdventOfCode2021

./: .gitignore  .gitmodules  README.md
Day0/: CMakeLists.txt  clean.sh  exec.sh
Day0/.cache/clangd/index/: lib.cpp.B96F082266ACD237.idx  lib.h.D440D71177CC776D.idx  lib.hpp.BD8B481F5AD6826D.idx  main.cpp.4974F10705F33FC3.idx
Day0/docs/: classMyLibrary_1_1Example-members.html  classMyLibrary_1_1Example__inherit__graph.map  dir_86f23f7812cbc9421bf12fd9be681e25.html  dir_8c6780576ac2d3f536fbb2d792f44c07.html  dir_ac38b3d6159efd6f98c13d28e88cd6d1.html
Day0/lib/: CMakeLists.txt  lib.cpp  lib.h  lib.hpp  tes.txt
Day0/scripts/: run.sh
Day0/src/: CMakeLists.txt  main.cpp  static_check.sh
Day0/test/: test_lib.cpp
Day00/docs/: DOXYGEN.md
Day00/inputs/: testData.txt
Day00/lib/: lib.cpp  lib.hpp
Day00/src/: main.cpp
Day01/: CMakeLists.txt
Day01/docs/Doxygen/: Orig__Catch_8hpp_source.html  dir_000001_000000.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba.html  globals.html  globals_func.html  lib_8cpp.html  lib_8cpp.js  lib_8hpp.html  lib_8hpp.js  lib_8hpp_source.html  main_8cpp.html
Day01/docs/Doxygen/search/: all_0.js  all_6.js  functions_1.js
Day01/docs/doxygen-html/: Orig__Catch_8hpp__dep__incl.map  Orig__Catch_8hpp__incl.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  globals.html  globals_func.html  graph_legend.html  index.html  lib_8cpp.html  lib_8hpp.html  lib_8hpp__dep__incl.md5  lib_8hpp_source.html  main_8cpp.html  navtreeindex0.js
Day01/lib/: lib.cpp  lib.h  lib.hpp
Day01/scripts/: execNinja.sh
Day01/src/: main.cpp  run_clang_format.sh
Day02/inputs/: testData.txt
Day03/inputs/: testData.txt
Day04/inputs/: testData.txt
Day06/: main.cpp
Day06/inputs/: testData.txt
Day07/inputs/: testData.txt
Day08/: run_clang_format.sh
Day08/inputs/: testData.txt
Day09/inputs/: testData.txt
Day1/: exec.sh  main.cpp
Day10/: exec.sh
Day10/docs/: Orig__Catch_8hpp__dep__incl.md5  Orig__Catch_8hpp__incl.map  Orig__Catch_8hpp__incl.md5  Orig__Catch_8hpp_source.html  classMyLibrary_1_1SubclassExample.html  dir_53667f503214e43bd5614f96d1c330ac.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9add6e423e5099e88bbbc35c0aea843c.html  md_README.html  pages.html
Day10/inputs/: input.txt  testData.txt
Day11/docs/: annotated.html  dir_7a39c12558a65bfe720528b2fe434b72.html  files.html  files_dup.js  hierarchy.js  navtreeindex0.js  test__lib_8cpp__incl.map
Day11/inputs/: testData.txt
Day11/scripts/: build.sh
Day11/test/: Orig_Catch.hpp
Day12/docs/: classMyLibrary_1_1SubclassExample.js  main_8cpp__incl.md5
Day12/inputs/: testData.txt
Day12/scripts/: exec.sh
Day13/docs/: classMyLibrary_1_1SubclassExample__inherit__graph.map  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_c0b60ad5e68032e0d24bf96269ccd095.js
Day13/inputs/: testData.txt
Day14/docs/: bug.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_b1cb82214665f0293b72d360755bf01c.html  dir_c0b60ad5e68032e0d24bf96269ccd095.html  navtreedata.js
Day14/inputs/: actualData.txt  testData.txt
Day14/lib/: lib.hpp
Day14/src/: main.cpp
Day14/test/: Orig_Catch.hpp
Day15/build.ninja/: .ninja_deps  .ninja_log  AoC  CMakeCache.txt  build.ninja  cmake_install.cmake
Day15/docs/: Orig__Catch_8hpp__dep__incl.map  Orig__Catch_8hpp__dep__incl.md5  Orig__Catch_8hpp__incl.map  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_53667f503214e43bd5614f96d1c330ac.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  dir_ee532ceb613f48f23d20ef02624c3a91.html  dir_f0bf63491986a0a28d1bbf5c2f6e40f5.html  files.html  inherit_graph_0.map  main_8cpp__incl.map  navtreeindex0.js  subclass-example_8hpp_source.html  (+1 more)
Day2/: main.cpp
Day22/: exec.sh
Day25/: CMakeLists.txt
Day25/docs/: dir_8c6780576ac2d3f536fbb2d792f44c07.html  main_8cpp__incl.md5
Day25/docs/search/: all_6.js
Day25/inputs/: testData.txt
Day25/lib/: lib.cpp  libchrono.cpp
Day3/: main.cpp
Day4/: main.cpp
Day5/: main.cpp
Day6/: CMakeLists.txt
Day7/: lib_BACKUP_144196.hpp  lib_REMOTE_144196.hpp  main.cpp
Day8/: CMakeLists.txt  clean.sh  exec.sh  lib.hpp  main.cpp
Day9/: exec_ninja.sh
(+120 files in other folders)
